--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [tool.poetry]
 name = "project1-shchepilov-ivan-m25-555"
 version = "0.1.0"
-description = ""
+description = "Консольная текстовая игра Лабиринт сокровищ"
 authors = ["sh1v <sh1vvv@yandex.ru>"]
 readme = "README.md"
 
-# Говорим Poetry, что код пакета лежит в папке labyrinth_game
 packages = [
     { include = "labyrinth_game" },
 ]
@@ -29,7 +28,5 @@ exclude = ["venv", ".venv", "dist", "__pycache__"]
 select = ["E", "F", "I"]
 ignore = []
 
-[dependency-groups]
-dev = [
-    "ruff (>=0.14.4,<0.15.0)"
-]
+[tool.poetry.group.dev.dependencies]
+ruff = ">=0.14.4,<0.15.0"
